--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bestlang": "0.0.1",
     "blankie": "1.1.1",
     "boom": "3.1.1",
+    "classnames": "^2.2.5",
     "css-loader": "0.23.1",
     "enhanced-require": "0.5.0-beta6",
     "eslint": "1.10.3",
