--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "hatchet": "0.3.2",
     "imports-loader": "0.6.5",
     "inert": "3.2.1",
+    "localized-countries": "1.0.2",
     "joi": "7.1.0",
     "json-loader": "0.5.4",
     "langmap": "0.0.12",
