--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "langmap": "0.0.12",
     "less": "2.5.3",
     "less-loader": "2.2.2",
+    "localized-countries": "1.0.2",
     "normalize.css": "5.0.0",
     "npm-run-all": "1.4.0",
     "object-assign": "4.1.0",
