--- a/package.json
+++ b/package.json
@@ -59,13 +59,13 @@
     "react-ga": "2.1.1",
     "react-intl": "2.1.3",
     "react-redux": "4.4.5",
-    "react-router": "2.0.0",
+    "react-router": "^2.0.0",
     "redux": "3.6.0",
     "request": "2.67.0",
     "scooter": "2.0.1",
     "style-loader": "0.13.0",
     "throng": "1.0.1",
-    "webpack": "1.12.9",
+    "webpack": "^1.12.9",
     "whatwg-fetch": "0.10.1"
   },
   "devDependencies": {
