--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react": "3.14.0",
     "exports-loader": "0.6.2",
     "extract-text-webpack-plugin": "0.9.1",
+    "form-data": "2.3.1",
     "good": "6.4.0",
     "good-console-logfmt": "1.0.2",
     "habitat": "3.1.2",
@@ -48,6 +49,7 @@
     "less": "2.5.3",
     "less-loader": "2.2.2",
     "localized-countries": "1.0.2",
+    "node-fetch": "1.7.2",
     "normalize.css": "5.0.0",
     "npm-run-all": "1.4.0",
     "object-assign": "4.1.0",
@@ -65,8 +67,7 @@
     "scooter": "2.0.1",
     "style-loader": "0.13.0",
     "throng": "1.0.1",
-    "webpack": "1.12.9",
-    "whatwg-fetch": "0.10.1"
+    "webpack": "1.12.9"
   },
   "devDependencies": {
     "cross-spawn": "2.1.4",
