sample.env update

--- a/sample.env
+++ b/sample.env
@@ -12,3 +12,6 @@ export AWS_SECRET_ACCESS_KEY=
 export HATCHET_APP_NAME=
 export HATCHET_QUEUE_REGION=
 export HATCHET_QUEUE_URL=
+
+export CALL_POWER_URL=https://demo.callpower.org/call/create
+export COPYRIGHT_CAMPAIGN_ID=1
