--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "langmap": "0.0.12",
     "less": "2.5.3",
     "less-loader": "2.2.2",
+    "libphonenumber-js": "^0.4.27",
     "localized-countries": "1.0.2",
     "node-fetch": "1.7.2",
     "normalize.css": "5.0.0",
