switch campaign ids via env value

--- a/sample.env
+++ b/sample.env
@@ -14,3 +14,5 @@ export HATCHET_QUEUE_REGION=
 export HATCHET_QUEUE_URL=
 
 export CALL_POWER_URL=https://demo.callpower.org/call/create
+
+export LOCATION_ID=1
